<resources>
    <string name="app_name">CibertecProject</string>
    <string name="name_admi">Administrador</string>

    ---menu options---
    <string name="str_events_nav">Menu eventos</string>
    <string name="str_list_events_nav">Lista de Eventos</string>
    <string name="str_expositor_nav">expositores</string>
    <string name="str_attendance_nav">Asistencia</string>
    <string name="str_course_nav">Cursos</string>

    <string name="str_list_expositor_nav">Lista de expositores</string>
    <string name="str_list_attendance_nav">Lista de asistencia</string>
    <string name="str_list_attendance_nav_detalle">Asistencia</string>
    <string name="str_list_courses_nav">Lista de Cursos</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="str_menu_toolbar_add">Agregar nuevo evento</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_nombre_curso">Nombre de Curso :</string>
    <string name="nombre_curso_ed">Nombre curso</string>
    <string name="descripcion">Descripcion :</string>
    <string name="course_costo">Costo :</string>
    <string name="titulo_crear_curso">Registrar Curso</string>
    <string name="btn_guardar_Course">Guardar</string>
    <string name="lbllugarCurso">Sede :</string>
    <string name="lblFechainicio">Fecha de Inicio :</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>
